Fix card header alignment

--- a/frontend/pages/DashboardPage/cards/ChartCard/_styles.scss
+++ b/frontend/pages/DashboardPage/cards/ChartCard/_styles.scss
@@ -4,8 +4,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: $pad-medium;
-    position: relative;
-    top: -2.5px;
+    min-height: 28px;
   }
 
   &__header-left {
